# med-spa-portal-1

./: .gitignore  README.md  VERCEL_DEPLOYMENT.md  VOICE_AI_SETUP.md  api_server.py  pyproject.toml  requirements.txt  server.py  start_api.bat  start_api.sh  vapi_assistant_config.json  vercel.json  vercel_app.py
