[project]
name = "medspa-mcp-server"
version = "0.1.0"
description = "FastMCP server for Miami Med Spa management"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
